--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,25 +2,35 @@ html{
 	font-family:'メイリオ', 'Meiryo', sans-serif;
 }
 
+body{
+	background: #f0f8ff;
+}
+nav{
+	margin-bottom: 1rem;
+}
+
 nav ul {
 	display: table;
 	margin: 0 auto;
 	padding: 0;
-	width: 80%;
+	width: 100%;
 	text-align: center;
 }
 
 nav li {
 	display: table-cell;
 	min-width: 50px;
+	width: calc(100% / 3);
 }
 
 nav a {
 	display: block;
 	width: 100%;
+	height: 3rem;
+	font-size: 1.5rem;
 	text-decoration: none;
 	color: #555;
-	padding-bottom: 5px;
+	line-height: 3rem
 }
 
 nav li.current {
@@ -32,6 +42,9 @@ nav li:hover {
 	border-bottom: 3px solid #F0E475;
 }
 
-div .main{
-	width: 80%
+div.main{
+	width: 80%;
+	height: 100vh;
+	margin: 0 auto;
+	background: #FFFFFF;
 }
