--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,8 +5,31 @@ html{
 body{
 	background: #f0f8ff;
 }
+
+div.main{
+	width: 100%;
+	height: 100vh;
+	margin: 0 auto;
+	background: #FFFFFF;
+}
+
+div.content{
+	margin: 1rem;
+}
+
+div.user_joho_area{
+	float: right;
+	padding-top: 0.5rem;
+	padding-right: 0.5rem;
+	font-size: 16pt;
+}
+
 nav{
 	margin-bottom: 1rem;
+}
+
+nav img{
+    vertical-align: middle;
 }
 
 nav ul {
@@ -20,7 +43,7 @@ nav ul {
 nav li {
 	display: table-cell;
 	min-width: 50px;
-	width: calc(100% / 3);
+	width: calc(100% / 5);
 }
 
 nav a {
@@ -40,11 +63,4 @@ nav li.current {
 nav li:hover {
 	color: #E7DA66;
 	border-bottom: 3px solid #F0E475;
-}
-
-div.main{
-	width: 80%;
-	height: 100vh;
-	margin: 0 auto;
-	background: #FFFFFF;
 }
