--- a/public/css/top.css
+++ b/public/css/top.css
@@ -1,7 +1,9 @@
 @charset "UTF-8";
 
 div.user_info{
-	border: 2px solid black;
-	width: 60%;
-	padding: 0.5rem
+    border: 2px solid black;
+    width: 60%;
+    padding: 0.5rem;
+    margin: 0 auto;
+    text-align: center;
 }
